.provarCaches/00D5f000005vwGkEAI/objects/rstk__soprodextn__c.object
<CustomObject>
    <description>soprodextn__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__soprodextn_soprod__r.rstk__formula_extid__c</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__soprodextn_soprod__r.Name</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soprodextn_buyfromcmp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Buy From Company</description>
        <inlineHelpText>When Direct Purchasing is active (set on SO Control record) and &apos;Inter-System Direct Product&apos; is checked, this field identifies the Rootstock Company from which the purchase will be made. This is only applicable under a Multi-Company environment.</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <referenceTo>rstk__sycmp__c</referenceTo>
        <relationshipLabel>RS Product Extensions</relationshipLabel>
        <relationshipName>soprodextns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soprodextn_buyfromdiv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Buy From Division</description>
        <inlineHelpText>When Direct Purchasing is active (set on SO Control record) and &apos;Inter-System Direct Product&apos; is checked, this field identifies the Division from which the purchase will be made. This is only applicable under a Multi-Division environment.</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>RS Product Extensions</relationshipLabel>
        <relationshipName>soprodextns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soprodextn_poitemvend__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Buy From Item Vendor</description>
        <inlineHelpText>When Direct Purchasing is active and &apos;Inter-System Direct Product&apos; is set, this identifies the Item Vendor record from which the PO information is derived (e.g., Purchase Price).</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <referenceTo>rstk__poitemvend__c</referenceTo>
        <relationshipLabel>RS Product Extensions</relationshipLabel>
        <relationshipName>soprodextns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soprodextn_povend__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Buy From Vendor</description>
        <inlineHelpText>When Direct Purchasing is active and &apos;Inter-System Direct Product&apos; is set, this identifies the &quot;Inter-System Vendor&quot; from which the purchase will be made. The &apos;Buy From&apos; Company or Division requires a RS Vendor record, which is what is referenced here.</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <referenceTo>rstk__povend__c</referenceTo>
        <relationshipLabel>RS Product Extensions</relationshipLabel>
        <relationshipName>RS_Product_Extensions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soprodextn_soprod__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Rootstock Product Master</label>
        <referenceTo>rstk__soprod__c</referenceTo>
        <relationshipLabel>RS Product Extensions</relationshipLabel>
        <relationshipName>soprodextns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Triggeroption</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Z_OBSOLETE</label>
    <nameField>
        <label>Z_OBSOLETE</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Z_OBSOLETE</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>